# MailGuard

./: .gitignore  LICENSE  README.md  resume-mailguard.md
client/: .env.example  aemeath.spec  convert_icon.py  main.py  pyproject.toml  requirements.txt
console/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
docs/: README.md  architecture.md  current-development-plan.md  decisions.md  development-handoff.md  (+10 more)
server/: .agent_cli.py.swp  .env.example  Dockerfile  agent_cli.py  agent_smoke.py  docker-compose.yml  email_cli.py  evaluate_email.py  pyproject.toml
server/app/: agent.py  archive_shadow.py  archive_shadow_workflow.py  artifacts.py  asr.py  auth.py  email_classifier.py  email_eval.py  email_eval_report.py  email_proposals.py  email_provider.py  email_scheduler.py  email_tools.py  llm_email_classifier.py  main.py  memory.py  memory_proposals.py  memory_workflow.py  observed_memory.py  prompts.py  proposal_eval.py  provider_factory.py  qq_imap_provider.py  real_email_eval.py  real_proposal_eval.py  redaction.py  runtime_env.py  sqlite_state.py  tools.py  tracer.py  tts.py
server/app/archive/: __init__.py  actions.py  models.py  plan.py  policy.py
server/app/cleaner/: __init__.py  audit.py  policy.py  preview.py  rules.py  run.py  storage.py  teach.py
server/app/cli/: __init__.py  label.py  render.py
server/app/daily_report/: __init__.py  models.py  planner.py  runner.py  storage.py  tools.py
server/data/: manual-mock-state.db  manual-real-state.db  mock_emails.json
(+47 files in other folders)
