[project]
name = "mailguard-server"
version = "0.1.0"
description = "MailGuard desktop pet backend server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
memory = [
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
]
tts = []
asr = []
